FmXmlRequest now creates a new XmlRequestHandler for each request ResultQueue can now report exceptions that occur while parsing